2025-05-10T01:41:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14940609527 # 967
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-10
* notice: last 14d: unq all: 24 68
* notice: prev accum: outdated-unq outdated-all / unq all: 4136 8799 / 4179 8865
* notice: next accum: outdated-unq outdated-all / unq all: 4136 8799 / 4180 8867
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-05-09 2025-05-10]

2025-05-09T12:41:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14929163430 # 966
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-09
* notice: last 14d: unq all: 23 66
* notice: prev accum: outdated-unq outdated-all / unq all: 4131 8791 / 4178 8864
* notice: next accum: outdated-unq outdated-all / unq all: 4136 8799 / 4179 8865
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-25] / [2025-05-09]

2025-05-09T01:45:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14919636057 # 965
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-09
* notice: last 14d: unq all: 23 66
* notice: prev accum: outdated-unq outdated-all / unq all: 4127 8785 / 4178 8863
* notice: next accum: outdated-unq outdated-all / unq all: 4131 8791 / 4178 8864
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -4 -7 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2025-04-24] / [2025-04-25 2025-05-08]

2025-05-08T12:42:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14906719042 # 964