@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-05-10T01:41:20Z",
+  "timestamp" : "2025-05-10T12:37:53Z",
   "count_outdated" : 8799,
   "uniques_outdated" : 4136,
-  "count" : 8867,
-  "uniques" : 4180,
+  "count" : 8868,
+  "uniques" : 4181,
   "clones" : [
     {
       "timestamp": "2025-04-26T00:00:00Z",
@@ -133,12 +133,12 @@
     },
     {
       "timestamp": "2025-05-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
