@@ -1,5 +1,5 @@
 {
-  "count": 68,
+  "count": 69,
   "uniques": 24,
   "clones": [
     {
@@ -74,8 +74,8 @@
     },
     {
       "timestamp": "2025-05-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
